--- a/about.html
+++ b/about.html
@@ -11,9 +11,9 @@
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
-    <header class="black">
+    <header>
       <div class="header-container">
-        <img id="logo" src="./images/logo-black.png" alt="GBG LOGO" />
+        <img id="logo" src="./images/logo.png" alt="GBG LOGO" />
         <nav>
           <div class="menu-icon">
             <i class="fa fa-bars fa-2x"></i>
@@ -21,11 +21,11 @@
 
           <ul>
             <i class="fa fa-times"></i>
-            <li><a href="#">მთავარი</a></li>
-            <li><a class="active" href="#">ჩვენ შესახებ</a></li>
-            <li><a href="#">გალერეა</a></li>
-            <li><a href="#">ჩვენი პროდუქცია</a></li>
-            <li><a href="#">კონტაქტი</a></li>
+            <li><a class="active" href="index.html">მთავარი</a></li>
+            <li><a href="about.html">ჩვენ შესახებ</a></li>
+            <li><a href="gallery.html">გალერეა</a></li>
+            <li><a href="products.html">ჩვენი პროდუქცია</a></li>
+            <li><a href="contact.html">კონტაქტი</a></li>
           </ul>
         </nav>
         <div class="hide-mobile"></div>
