--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 
           <ul>
             <i class="fa fa-times"></i>
-            <li><a class="active" href="#">მთავარი</a></li>
-            <li><a href="#">ჩვენ შესახებ</a></li>
-            <li><a href="#">გალერეა</a></li>
-            <li><a href="#">ჩვენი პროდუქცია</a></li>
-            <li><a href="#">კონტაქტი</a></li>
+            <li><a class="active" href="index.html">მთავარი</a></li>
+            <li><a href="about.html">ჩვენ შესახებ</a></li>
+            <li><a href="gallery.html">გალერეა</a></li>
+            <li><a href="products.html">ჩვენი პროდუქცია</a></li>
+            <li><a href="contact.html">კონტაქტი</a></li>
           </ul>
         </nav>
         <div class="hide-mobile"></div>
