--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
-    <header>
+    <header class="black">
       <div class="header-container">
         <img id="logo" src="./images/logo.png" alt="GBG LOGO" />
         <nav>
