--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
       </div>
     </header>
     <section class="banner">
+      <video autoplay muted loop id="myVideo">
+  <source src="images/render.m4v" type="video/mp4">
+  Your browser does not support HTML5 video.
+</video>
       <div class="container">
         <p>GBG კომპანიამ დიდი მასშტაბის ინვესტიციების განხორციელება დაიწყო</p>
       </div>
